src/test/resources/semantic/custom/reject/whileStatementIntType.ul
void main() {
}

void foo() {
    int condition;

    while (condition + condition) {
    }
}
